Update P.1.3 -  Pearson Correlation on Height and Weight Data (n = 200).ipynb

--- a/P.1.3 -  Pearson Correlation on Height and Weight Data (n = 200).ipynb
+++ b/P.1.3 -  Pearson Correlation on Height and Weight Data (n = 200).ipynb
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "# calculating a person correlation\n",
+    "# calculating a pearson correlation\n",
     "\n",
     "import numpy as np\n",
     "import scipy.stats\n",
