Update R.1 - Monty Hall Problem Illustration.ipynb

--- a/R.1 - Monty Hall Problem Illustration.ipynb
+++ b/R.1 - Monty Hall Problem Illustration.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# The Monty Hall Problem:\n",
     "\n",
-    "'Suppose you're on a game show, and you're given the choice of three doors: Behind one door is a car; behind the others, goats. You pick a door, say No. 1, and the host, who knows what's behind the doors, opens another door, say No. 3, which has a goat. He then says to you, \"Do you want to pick door No. 2?\" Is it to your advantage to switch your choice?'\n",
+    "'Suppose you're on a game show, and you're given the choice of three doors: Behind one door is a car; behind the others, goats. You pick a door [...] and the host, who knows what's behind the doors, opens another door, [...] which has a goat. He then says to you, \"Do you want to [switch your choice]?\" Is it to your advantage to switch your choice?'\n",
     "\n",
     "https://en.wikipedia.org/wiki/Monty_Hall_problem"
    ]
