Update Meta-analysis Simulation - Relative Risk (Inverse-Variance Method, Fixed Effect).ipynb

--- a/Meta-analysis Simulation - Relative Risk (Inverse-Variance Method, Fixed Effect).ipynb
+++ b/Meta-analysis Simulation - Relative Risk (Inverse-Variance Method, Fixed Effect).ipynb
@@ -830,7 +830,7 @@
     "display(df)\n",
     "\n",
     "\n",
-    "# creating a forest plot of relative risks for each study\n",
+    "# creating a forest plot of relative risk for each study\n",
     "\n",
     "y = []\n",
     "zeros = []\n",
