Update Meta-analysis Simulation - Odds Ratio (Inverse-Variance, Fixed Effect).ipynb

--- a/Meta-analysis Simulation - Odds Ratio (Inverse-Variance, Fixed Effect).ipynb
+++ b/Meta-analysis Simulation - Odds Ratio (Inverse-Variance, Fixed Effect).ipynb
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# importing libraries\n",
+    "# importing the required libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
